test/e2e/propagation-policy-lifecycle/workload-deployment-alpha.yaml
apiVersion: compute.datumapis.com/v1alpha
kind: WorkloadDeployment
metadata:
  name: wd-alpha
spec:
  locationRef:
    name: dfw
  placementName: default
  workloadRef:
    name: test-workload
    uid: "00000000-0000-0000-0000-000000000001"
  template:
    spec:
      runtime:
        resources:
          instanceType: datumcloud-d1-standard-2
      networkInterfaces:
      - network:
          name: test-network

  scaleSettings:
    minReplicas: 1
