test/e2e/propagation-policy-lifecycle/assert-pp-exists.yaml
# Asserts that the PropagationPolicy for city dfw exists in the Karmada namespace.
apiVersion: policy.karmada.io/v1alpha1
kind: PropagationPolicy
metadata:
  namespace: ($karmadaNS)
  name: workload-deployments-dfw
